--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "preferGlobal": true,
   "dependencies": {
-      "generic-functions": ">= 0.1.6"
+      "generic-functions": ">= 0.1.6",
+      "colors": ">= 1.0.3"
   },
   "devDependencies": {
       "mocha": ">= 2.0.1",
