--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "preferGlobal": true,
   "dependencies": {
       "generic-functions": ">= 0.1.7",
-      "colors": ">= 1.0.3",
-      "hexy": ">= 0.2.7"
+      "colors": ">= 1.0.3"
   },
   "devDependencies": {
       "mocha": ">= 2.0.1",
